syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  rpc SignIn(SignInRequest) returns (SignInResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

// SignUp

message SignUpRequest {
  string email = 1;
  string password = 2;
}

message SignUpResponse {
  int64 status = 1;
  string error = 2;
}

// SignIn

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

// Validate

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
}